--- a/index.html
+++ b/index.html
@@ -21,10 +21,11 @@
   </head>
   <body>
     <div class="complect">Комплекты молниезащиты и заземления для розничных и оптовых покупателей</div>
+    <section>
     <div class="container-fluid">
 
       <div class="row">
-        <div class=" col-lg-3">
+        <div class="col-lg-3">
           <div class="logo">
             <img src="img/image.png" alt="logo">
           </div>
@@ -46,6 +47,9 @@
           </div>
         </div>
       </div>
+    </div>
+    </section>
+     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <div class="magazine__comp">Каталог комплектующих</div>
