--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-offset-1 col-lg-2">
           <div class="logo">
             <img src="img/image.png" alt="logo">
           </div>
@@ -49,13 +49,13 @@
       </div>
     </div>
     </section>
-     <div class="container-fluid">
+     <!-- <div class="container-fluid"> -->
       <div class="row">
         <div class="col-lg-4">
           <div class="magazine__comp">Каталог комплектующих</div>
         </div>
         <div class="col-lg-8">
-          <ul>
+          <ul class="main-manu">
             <li><a href="#">Производство</a></li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">Оптовикам</a></li>
@@ -64,7 +64,7 @@
           </ul>
         </div>
       </div>
-    </div>
+    <!-- </div> -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
