--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <title>Сталь-Про</title>
     <link rel="stylesheet" href="css/normalize.css">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800&amp;subset=cyrillic" rel="stylesheet">
+    <link rel="stylesheet" href="css/slick.css">
+    <link rel="stylesheet" href="css/slick-theme.css">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -65,9 +67,33 @@
         </div>
       </div>
     </div>
+    <section>
+      <div class="conteiner-fluid">
+        <div class="row">
+          <div class="col-lg-4">
+
+          </div>
+          <div class="col-lg-8">
+            <div class="top-slider">
+              <div class="top-slider__list-item">
+                <img src="img/Group.png" alt="">
+              </div>
+              <div class="top-slider__list-item">
+                <img src="img/Group.png" alt="">
+              </div>
+              <div class="top-slider__list-item">
+                <img src="img/Group.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
+    <script src="js/slick.min.js" charset="utf-8"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/main.js" charset="utf-8"></script>
   </body>
 </html>
