--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i,800&amp;subset=cyrillic" rel="stylesheet">
     <link rel="stylesheet" href="css/slick.css">
     <link rel="stylesheet" href="css/slick-theme.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
     <!-- Bootstrap -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
@@ -27,7 +28,7 @@
     <div class="container-fluid">
 
       <div class="row">
-        <div class="col-lg-offset-1 col-lg-2">
+        <div class="col-lg-3">
           <div class="logo">
             <img src="img/image.png" alt="logo">
           </div>
@@ -51,13 +52,13 @@
       </div>
     </div>
     </section>
-     <!-- <div class="container-fluid"> -->
+     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <div class="magazine__comp">Каталог комплектующих</div>
         </div>
         <div class="col-lg-8">
-          <ul class="main-manu">
+          <ul>
             <li><a href="#">Производство</a></li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">Оптовикам</a></li>
@@ -66,7 +67,6 @@
           </ul>
         </div>
       </div>
-<<<<<<< HEAD
     </div>
     <section>
       <div class="conteiner-fluid">
@@ -90,9 +90,6 @@
         </div>
       </div>
     </section>
-=======
-    <!-- </div> -->
->>>>>>> a26cec4fdf6005883937e8a5a0d586aff6cf8f28
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
