--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
   <body>
     <div class="complect">Комплекты молниезащиты и заземления для розничных и оптовых покупателей</div>
     <section>
+      <div class="header">
     <div class="container-fluid">
-
       <div class="row">
         <div class="col-lg-offset-1 col-lg-2">
           <div class="logo">
@@ -50,6 +50,7 @@
         </div>
       </div>
     </div>
+    </div>
     </section>
      <!-- <div class="container-fluid"> -->
       <div class="row">
@@ -66,14 +67,38 @@
           </ul>
         </div>
       </div>
-<<<<<<< HEAD
     </div>
-    <section>
+    <!-- <section> -->
       <div class="conteiner-fluid">
         <div class="row">
-          <div class="col-lg-4">
-
+          <!-- <div class="wraping"> -->
+          <div class="col-lg-offset-1 col-lg-3">
+            <h6 class="earth-left">Заземления</h6>
+            <ul class="left-menu">
+              <li><a href="#">Комплекта заземления</a></li>
+              <li><a href="#">Заземляющие электроды</a></li>
+              <li><a href="#">Головки и наконечники</a></li>
+              <li><a href="#">Соединительный элемент<br/>
+муфты, зажимы</a></li>
+              <li><a href="#">Инструмент и оснастка</a></li>
+              <li><a href="#">Токопроводящая смазка<br/>
+и изоляция соединений</a></li>
+              <li><a href="#">Шина заземления</a></li>
+            </ul>
+            <h6 class="earth-left">Заземления</h6>
+            <ul class="left-menu">
+              <li><a href="#">Комплекта заземления</a></li>
+              <li><a href="#">Заземляющие электроды</a></li>
+              <li><a href="#">Головки и наконечники</a></li>
+              <li><a href="#">Соединительный элемент<br/>
+муфты, зажимы</a></li>
+              <li><a href="#">Инструмент и оснастка</a></li>
+              <li><a href="#">Токопроводящая смазка<br/>
+и изоляция соединений</a></li>
+              <li><a href="#">Шина заземления</a></li>
+            </ul>
           </div>
+          <!-- </div> -->
           <div class="col-lg-8">
             <div class="top-slider">
               <div class="top-slider__list-item">
@@ -87,12 +112,13 @@
               </div>
             </div>
           </div>
+
         </div>
       </div>
-    </section>
-=======
+    <!-- </section> -->
+
     <!-- </div> -->
->>>>>>> a26cec4fdf6005883937e8a5a0d586aff6cf8f28
+
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <!-- Include all compiled plugins (below), or include individual files as needed -->
