--- a/index.html
+++ b/index.html
@@ -86,6 +86,118 @@
                 <img src="img/Group.png" alt="">
               </div>
             </div>
+
+            <div class="new-shop">
+              <div class="new-shop__title">
+                <p>Новинки</p>
+              </div>
+              <div class="new-shop__slider">
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+              </div>
+            </div>
+
+            <div class="new-shop">
+              <div class="new-shop__title">
+                <p>Топ-продаж</p>
+              </div>
+              <div class="new-shop__slider">
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+                <div class="new-shop__slider__list-item">
+                  <img src="img/img.png" alt="">
+                  <span>Молниеприемная мачта <br>(2 м; нерж.сталь)</span>
+                  <p>4 126.00 руб.</p>
+                  <div>В корзину</div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
