--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="header">
     <div class="container-fluid">
       <div class="row">
-        <div class="col-lg-3">
+        <div class="col-lg-offset-1 col-lg-2">
           <div class="logo">
             <img src="img/image.png" alt="logo">
           </div>
@@ -53,13 +53,14 @@
     </div>
     </div>
     </section>
-     <div class="container-fluid">
+    <div class="wrap-line-menu">
+     <!-- <div class="container-fluid"> -->
       <div class="row">
         <div class="col-lg-4">
           <div class="magazine__comp">Каталог комплектующих</div>
         </div>
         <div class="col-lg-8">
-          <ul>
+          <ul class="main-manu">
             <li><a href="#">Производство</a></li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">Оптовикам</a></li>
@@ -68,6 +69,7 @@
           </ul>
         </div>
       </div>
+    <!-- </div> -->
     </div>
     <!-- <section> -->
       <div class="conteiner-fluid">
@@ -76,27 +78,28 @@
           <div class="col-lg-offset-1 col-lg-3">
             <h6 class="earth-left">Заземления</h6>
             <ul class="left-menu">
-              <li><a href="#">Комплекта заземления</a></li>
-              <li><a href="#">Заземляющие электроды</a></li>
-              <li><a href="#">Головки и наконечники</a></li>
-              <li><a href="#">Соединительный элемент<br/>
+              <li><a href="#">Комплекта заземления <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Заземляющие электроды <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Головки и наконечники <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Соединительный элемент <span><i class="fa fa-angle-right" aria-hidden="true"></i></span><br/>
 муфты, зажимы</a></li>
-              <li><a href="#">Инструмент и оснастка</a></li>
-              <li><a href="#">Токопроводящая смазка<br/>
+              <li><a href="#">Инструмент и оснастка <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Токопроводящая смазка <span><i class="fa fa-angle-right" aria-hidden="true"></i></span><br/>
 и изоляция соединений</a></li>
-              <li><a href="#">Шина заземления</a></li>
+              <li><a href="#">Шина заземления <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
             </ul>
             <h6 class="earth-left">Заземления</h6>
             <ul class="left-menu">
-              <li><a href="#">Комплекта заземления</a></li>
-              <li><a href="#">Заземляющие электроды</a></li>
-              <li><a href="#">Головки и наконечники</a></li>
-              <li><a href="#">Соединительный элемент<br/>
-муфты, зажимы</a></li>
-              <li><a href="#">Инструмент и оснастка</a></li>
-              <li><a href="#">Токопроводящая смазка<br/>
-и изоляция соединений</a></li>
-              <li><a href="#">Шина заземления</a></li>
+              <li><a href="#">Держатели проводника <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Машинка для выпрямления <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Комплект молниезащиты <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
+              <li><a href="#">Комплектующие для мачт
+ <span><i class="fa fa-angle-right" aria-hidden="true"></i></span><br/>
+и молниеприемников</a></li>
+              <li><a href="#">Мачты под активный <span><i class="fa fa-angle-right" aria-hidden="true"></i></span><br/>молниеприемник</a></li>
+              <li><a href="#">Мачты под пассивный  <span><i class="fa fa-angle-right" aria-hidden="true"></i></span><br/>
+молниеприемник</a></li>
+              <li><a href="#">Активные молниеприемники <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
             </ul>
           </div>
           <!-- </div> -->
