--- a/index.html
+++ b/index.html
@@ -53,8 +53,9 @@
     </div>
     </div>
     </section>
+    <section>
     <div class="wrap-line-menu">
-     <!-- <div class="container-fluid"> -->
+     <div class="container-fluid">
       <div class="row">
         <div class="col-lg-4">
           <div class="magazine__comp">Каталог комплектующих</div>
@@ -69,9 +70,10 @@
           </ul>
         </div>
       </div>
-    <!-- </div> -->
     </div>
-    <!-- <section> -->
+    </div>
+    </section>
+    <section>
       <div class="conteiner-fluid">
         <div class="row">
           <!-- <div class="wraping"> -->
@@ -232,7 +234,7 @@
         </div>
       </div>
 
-    <!-- </section> -->
+    </section>
 
     <!-- </div> -->
 
