--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
           <div class="magazine__comp">Каталог комплектующих</div>
         </div>
         <div class="col-lg-8">
-          <ul class="main-manu">
+          <ul class="main-manu clearfix">
             <li><a href="#">Производство</a></li>
             <li><a href="#">Доставка и оплата</a></li>
             <li><a href="#">Оптовикам</a></li>
@@ -77,7 +77,8 @@
       <div class="conteiner-fluid">
         <div class="row">
           <!-- <div class="wraping"> -->
-          <div class="col-lg-offset-1 col-lg-3">
+          <div class="col-lg-3">
+           
             <h6 class="earth-left">Заземления</h6>
             <ul class="left-menu">
               <li><a href="#">Комплекта заземления <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
@@ -103,6 +104,7 @@
 молниеприемник</a></li>
               <li><a href="#">Активные молниеприемники <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
             </ul>
+            
           </div>
           <!-- </div> -->
           <div class="col-lg-8">
