--- a/index.html
+++ b/index.html
@@ -74,11 +74,11 @@
     </div>
     </section>
     <section>
-      <div class="conteiner-fluid">
+      <div class="container-fluid">
         <div class="row">
           <!-- <div class="wraping"> -->
-          <div class="col-lg-3">
-           
+          <div class="col-lg-4">
+            <div class="wraps">
             <h6 class="earth-left">Заземления</h6>
             <ul class="left-menu">
               <li><a href="#">Комплекта заземления <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
@@ -104,8 +104,9 @@
 молниеприемник</a></li>
               <li><a href="#">Активные молниеприемники <span><i class="fa fa-angle-right" aria-hidden="true"></i></span></a></li>
             </ul>
-            
+            </div>
           </div>
+
           <!-- </div> -->
           <div class="col-lg-8">
             <div class="top-slider">
@@ -230,20 +231,6 @@
                   <div>В корзину</div>
                 </div>
               </div>
-            </div>
-            <div class="information-text">
-              <div class="information-text__title">Принцип действия и виды молниезащиты</div>
-              <p style="margin-top: 31px;">От поражения молнией в России ежегодно погибает 550 человек. Ущерб при попадании в здания составляет 3 млрд.руб и выражается в:</p>
-              <ul>
-                <li>• Разрушении строения или его части</li>
-                <li>• Неполадкам в электросети или сгорании электрической проводки и приборов</li>
-                <li>• Гибели или травмировании живых существ.</li>
-              </ul>
-              <p style="margin-top: 25px;">Соотношение попадания разряда в человека составляет 1:4000, но никто не застрахован от «электрического поцелуя». Чтоб избежать последствий поражения молнией разработана молниезащита купить которую по выгодным ценам можно на сайте.</p>
-              <p style="margin-top: 27px"> <b>Средством защиты от молнии выступает громоотвод.</b> Первым, кому удалось обезопасить человека от попадания молнии в строение, принято считать Бенджамина Франклина. Который еще в 1775 году на Капитолии установил стержень из железа, возвышающийся над зданием заземленный через прикрепленный к земле провод. Устройство, не смотря на отказ изобретателя от патентирования, вскоре приобрело популярность в США и Европе.</p>
-              <p>Сама система молниезащита представлена двумя видами:</p>
-              <p>1. Внешняя система молниезащиты. Функционирует по принципу перехвата молнии и отведения ее в землю. Так удается избежать разрушений и пожаров, наносимого попаданием природного электрического разряда в сооружение. Когда молниезащитное устройство спроектировано правильно, то в момент попадания заряда в здание, удар приходится на него и безопасно рассеивается. Основные подвиды внешней молниезащиты:</p>
-
             </div>
           </div>
 
