--- a/index.html
+++ b/index.html
@@ -237,11 +237,33 @@
                 <li>• Неполадкам в электросети или сгорании электрической проводки и приборов</li>
                 <li>• Гибели или травмировании живых существ.</li>
               </ul>
-              <p style="margin-top: 25px;">Соотношение попадания разряда в человека составляет 1:4000, но никто не застрахован от «электрического поцелуя». Чтоб избежать последствий поражения молнией разработана молниезащита купить которую по выгодным ценам можно на сайте.</p>
-              <p style="margin-top: 27px"> <b>Средством защиты от молнии выступает громоотвод.</b> Первым, кому удалось обезопасить человека от попадания молнии в строение, принято считать Бенджамина Франклина. Который еще в 1775 году на Капитолии установил стержень из железа, возвышающийся над зданием заземленный через прикрепленный к земле провод. Устройство, не смотря на отказ изобретателя от патентирования, вскоре приобрело популярность в США и Европе.</p>
+              <p>Соотношение попадания разряда в человека составляет 1:4000, но никто не застрахован от «электрического поцелуя». Чтоб избежать последствий поражения молнией разработана молниезащита купить которую по выгодным ценам можно на сайте.</p>
+              <p><b>Средством защиты от молнии выступает громоотвод.</b> Первым, кому удалось обезопасить человека от попадания молнии в строение, принято считать Бенджамина Франклина. Который еще в 1775 году на Капитолии установил стержень из железа, возвышающийся над зданием заземленный через прикрепленный к земле провод. Устройство, не смотря на отказ изобретателя от патентирования, вскоре приобрело популярность в США и Европе.</p>
               <p>Сама система молниезащита представлена двумя видами:</p>
               <p>1. Внешняя система молниезащиты. Функционирует по принципу перехвата молнии и отведения ее в землю. Так удается избежать разрушений и пожаров, наносимого попаданием природного электрического разряда в сооружение. Когда молниезащитное устройство спроектировано правильно, то в момент попадания заряда в здание, удар приходится на него и безопасно рассеивается. Основные подвиды внешней молниезащиты:</p>
-
+              <ul style="margin-top: 26px">
+                <li>• Сеть для приема молний</li>
+                <li>• Натянутый трос для приема молний</li>
+                <li>• Стержень для приема молний.</li>
+                <li>• Активная молниезащита</li>
+              </ul>
+              <p>Не зависимо от вида, внешняя защита от молний включает в себя молниеотвод, токоотводы (спуски) и заземлитель. Молниеотвод выполнен из металла и призван перехватывать заряд. Токоотвод предназначен отводить ток от молниеприемника к заземлителю. Заземлитель – проводник, помогающий отвести через систему опасный для здоровья заряд.</p>
+              <p><b>2. Внутренняя система.</b> Включает в себя несколько приборов защиты от перенапряжений, возникающих из-за прямого или не прямого удара молнией.</p>
+              <p><em>• Прямое попадание.</em> Молнии попадают в здание или коммуникационные линии. Перенапряжение, возникшее в следствии прямого попадания опасно из-за запаса энергии составляющего 10/350 мкс.</p>
+              <p><em>• Непрямое попадание.</em> Это попадание молнии недалеко от линий коммуникации. Запасенная энергия от непрямого удара в 17ть раз меньше, чем от прямого.</p>
+              <p>Залогом безопасности на момент грозы является молниезащита частного дома купить которую необходимо без лишних отлагательств сразу по окончанию строительства.</p>
+              <p><b>Молниезащита зданий купить в Москве</b></p>
+              <p>Когда нужна молниезащита цена – не тот фактор, способный повлиять на ее приобретение. Ведь на здоровье и жизни близких людей нельзя экономить. Системы защиты от молний любого из вышеуказанных видов лучше всего покупать в магазинах способных предоставить гарантию на свой товар.</p>
+              <p>Молниезащита промышленных объектов имеет не меньшую категорию важности нежели защита жилых зданий от попадания молнии. Ведь под угрозой оказываются люди и производственные мощности.</p>
+              <p>«Сталь-Про» предоставляет молниезащиты любого типа и сложности, что позволяет их оптимизировать под индивидуальные пожелания каждого заказчика или особенности системы.</p>
+              <p><b>При покупке молниезащиты у «Сталь-Про» вы получаете:</b></p>
+              <ul>
+                <li>• Исчерпывающую консультацию при выборе и установке</li>
+                <li>• Ассортимент продукции. У нас можно выбрать молниезащиты для жилых домов и промышленных объектов</li>
+                <li>• Продукцию, изготовленную из качественного материала</li>
+                <li>• Молниезащиты европейского качества</li>
+                <li>• Доставку в любой регион России.</li>
+              </ul>
             </div>
           </div>
 
