--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <div class="complect">Комплекты молниезащиты и заземления для розничных и оптовых покупателей</div>
     <section>
       <div class="header">
-    <div class="container-fluid">
+    <div class="container-fluid media-container">
       <div class="row">
         <div class="col-lg-offset-1 col-lg-2">
           <div class="logo">
@@ -108,7 +108,7 @@
           </div>
 
           <!-- </div> -->
-          <div class="col-lg-8">
+          <div class="col-lg-8 media-container2">
             <div class="top-slider">
               <div class="top-slider__list-item">
                 <img src="img/Group.png" alt="">
